--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: MetabMiss
 Title: Estimate and account for non-ignorable missingness mechanisms and latent confounding.
-Version: 1.0
-Date: 2019-01-07
+Version: 1.1
+Date: 2019-08-12
 Authors@R: 
     person(given = "Chris",
            family = "McKennan",
            role = c("aut", "cre"),
            email = "cgm29@uchicago.edu")
-Description: Estimate and account for non-ignorable missing data and latent confounding in mass spectrometry data, with application to metabolomic and proteomic experiments. There are two main functions. "EstimateMissing" estimates the metabolite/protein-dependent missingness mechanisms. This only has to be done once per dataset, and the output should be stored with the data. "CC.Missing" estimates latent confounding factors and does estimation and inference on the coefficients of interest in a multivariate linear model using the estimated missingness mechanisms.
+Description: Estimate and account for non-ignorable missing data and latent confounding in mass spectrometry data, with application to metabolomic and proteomic experiments. There are three main functions. "Num.Instruments" can be used to estimate the number of potential instruments, which will be used to estimate each metabolite-dependent missingness mechanism. "EstimateMissing" estimates the metabolite-dependent missingness mechanisms. This only has to be done once per dataset, and the output should be stored with the data. "CC.Missing" estimates latent confounding factors and does estimation and inference on the coefficients of interest in a multivariate linear model using the estimated missingness mechanisms.
 Depends: parallel, qvalue, sva
 License: GPL-2
 Encoding: UTF-8
